Made additional changes

--- a/index.html
+++ b/index.html
@@ -12,29 +12,31 @@
 <body>
         <section class='about-me'> 
             <div class="name">
-                <h1 class="first-line">Hey there! 👋 I am</h1>
+                <h2 class="first-line">Hey there! 👋 I am</h2>
                 <h1 class="second-line">Suzi!</h1>
+                <p><span class="wave">👋 </span>I'm currently a Data Analyst, studying to become a Full-stack Developer </p>
             </div>
             <div class="background-img">
                 <img class="profile-img" src="black codher.webp" alt="coding-female">
             </div>
-            <p><span class="wave">👋 </span>I'm currently a Data Analyst and a studying to become a Full-stack Developer </p>
+            <!-- <p><span class="wave">👋 </span>I'm currently a Data Analyst and a studying to become a Full-stack Developer </p> -->
         </section>
 
         <section class="sec-skew">
             <div class="sec-container">
                 <h2>Bootcamp Projects</h2>
-                <ol class="projects">
+                <ul class="projects">
                     <li>JavaScript group project</li>
                     <li>React project</li>
                     <li>Node project</li>
                     <li>MongoDB project</li>
                     <li>Personal project</li>
-                </ol>
+                </ul>
             </div>
         </section> 
        
         <section class="timeline-section">
+            <h1 class="timeline-header">Timeline</h1>
             <div class='timeline-items'>
                 <div class='timeline-item'>
                   <div class='timeline-dot'></div>
