--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- <link rel="icon" href="favicon.ico" type="image/x-icon"> -->
-    <link rel="icon">
+    <!-- <link rel="icon"> -->
     <title>Portfolio</title>
 </head>
 <body>
