Place images in separate folder

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <p><span class="wave">👋 </span>I'm currently a Data Analyst, studying to become a Full-stack Developer </p>
             </div>
             <div class="background-img">
-                <img class="profile-img" src="black codher.webp" alt="coding-female">
+                <img class="profile-img" src="/images/black codher.webp" alt="coding-female">
             </div>
             <!-- <p><span class="wave">👋 </span>I'm currently a Data Analyst and a studying to become a Full-stack Developer </p> -->
         </section>
